--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body class="">
     <div class="wrapper">
         <div class="graphics">
-            <div class="tower">
+           <!--  <div class="tower">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      viewBox="-11 170 1000 429" enable-background="new -11 170 1000 429" xml:space="preserve">
                     <path class="path" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-miterlimit="10" d="M989,595H712v-35c0,0,4.5-1.8,8-3
@@ -41,7 +41,7 @@
                                                                                                   c-5-0.1-5.5,8.6-18.8,6.6c-12.3-1.9-12.3-9.1-16.4-12.3C229.7,411.3,215.8,413.6,215.8,398.8z"/>
                 </svg>
 
-            </div>
+            </div> -->
         </div>
 
         <header>
